# sudoko-creator-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: board.rs  creator.rs  main.rs  solver.rs
